# EDATP2

./: CMakeLists.txt  main.c
estructuras/: estructuras.h
graficos/: config.h  graficos.c  graficos.h
logica/: funcionamiento.c  funcionamiento.h
parser/: parser.c  parser.h
